@@ -59,6 +59,7 @@ typedef struct amhost_s {
 
 typedef struct disk_s {
     int		line;			/* line number of last definition */
+    char       *filename;               /* the filename where it is read */
     struct disk_s *prev, *next;		/* doubly linked disk list */
 
     am_host_t	*host;			/* host list */
